test/classes/delete-free/borrowed/makeNewBorrowed-typeAlias.chpl
class C { }

{
  type T = borrowed C;
  var b = new T();
}
{
  type T = borrowed C?;
  var b = new T();
}

{
  proc T type {
    return borrowed C;
  }
  var b = new T();
}

{
  proc T() type {
    return borrowed C?;
  }
  var b = new T()();
}
